microservices/auth/deployment/preprod/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: auth
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: docker.pkg.github.com/alexandr-io/backend/auth:latest-preprod
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: auth
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
